--- a/charts/agent/values.yaml
+++ b/charts/agent/values.yaml
@@ -210,6 +210,10 @@ secure:
   # true here enables Sysdig Secure: container run-time security & forensics
   enabled: true
 
+monitor:
+  # true here enables Sysdig Monitor components
+  enabled: true
+
 auditLog:
   # true here activates the K8s Audit Log feature for Sysdig Secure
   enabled: true
