Add ephemeral storage request in GKE Autopilot envs
In certain situations the agent would run into issues at startup if there was
not enough space to compile the eBPF probe. This change places an
ephemeral-storage request on the agent container when the gke.autopilot flag
has been set to address this issue.

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -89,6 +89,10 @@ spec:
             readOnlyRootFilesystem: false
             allowPrivilegeEscalation: true
           resources:
+          {{- if and (include "agent.gke.autopilot" .)
+                     (not (hasKey $.Values.slim.resources.requests "ephemeral-storage")) }}
+            {{- $_ := merge $.Values.slim.resources.requests (dict "ephemeral-storage" .Values.gke.ephemeralStorage) }}
+          {{- end }}
 {{ toYaml .Values.slim.resources | indent 12 }}
           env:
           {{- if or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .) }}
@@ -146,7 +150,7 @@ spec:
           image: {{ template "agent.image" . }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
-{{ include "agent.resources" . | indent 12 }}
+{{- include "agent.resources" . | indent 12 }}
           securityContext:
             capabilities:
               drop:
