--- a/charts/rapid-response/tests/label_test.yaml
+++ b/charts/rapid-response/tests/label_test.yaml
@@ -10,10 +10,10 @@ tests:
         daemonSetLabels: {"my.label/key1": "testlabel1","my.label/key2": "testlabel2"}
     asserts:
     - equal:
-        path: metadata.labels.my\.label\/key1
+        path: metadata.labels['my.label/key1']
         value: testlabel1
     - equal:
-        path: metadata.labels.my\.label\/key2
+        path: metadata.labels['my.label/key2']
         value: testlabel2
   - it: check application of rapid response labels example 2
     set:
@@ -25,10 +25,10 @@ tests:
           my.label/key2: testlabel2
     asserts:
     - equal:
-        path: metadata.labels.my\.label\/key1
+        path: metadata.labels['my.label/key1']
         value: testlabel1
     - equal:
-        path: metadata.labels.my\.label\/key2
+        path: metadata.labels['my.label/key2']
         value: testlabel2
   - it: check application of rapid response labels example 3
     set:
@@ -40,10 +40,10 @@ tests:
           my.label/version: 2.7.3
     asserts:
     - equal:
-        path: metadata.labels.my\.label\/key
+        path: metadata.labels['my.label/key']
         value: testlabel
     - equal:
-        path: metadata.labels.my\.label\/version
+        path: metadata.labels['my.label/version']
         value: 2.7.3
   - it: check application of correct rapid response labels with value of label empty
     set:
@@ -53,7 +53,7 @@ tests:
         daemonSetLabels: "my.label/key1: "
     asserts:
     - equal:
-        path: metadata.labels.my\.label\/key1
+        path: metadata.labels['my.label/key1']
         value:
   - it: check application of incorrect rapid response labels with yaml
     set:
