--- a/.github/workflows/helm-unit-test.yaml
+++ b/.github/workflows/helm-unit-test.yaml
@@ -52,8 +52,9 @@ jobs:
       - name: Test registry-scanner
         run: helm unittest --strict ./charts/registry-scanner
 
-      - name: Test sysdig
-        run: helm unittest --strict ./charts/sysdig
+      # Deprecated
+      # - name: Test sysdig
+      #   run: helm unittest --strict ./charts/sysdig
 
       - name: Test sysdig-deploy
         run: helm unittest --strict ./charts/sysdig-deploy
