Update unit tests to match what they actually test...

--- a/charts/agent/tests/monitor_enable_test.yaml
+++ b/charts/agent/tests/monitor_enable_test.yaml
@@ -46,7 +46,7 @@ tests:
       - failedTemplate:
           errorMessage: 'Cannot set agent.monitor.enabled=true when agent.sysdig.settings.feature.mode is secure or secure_light'
 
-  - it: Test monitor.enabled when specifying secure_light mode
+  - it: Test monitor.enabled when specifying secure mode
     set:
       monitor:
         enabled: true
