--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -224,8 +224,8 @@ spec:
             {{- end }}
             - mountPath: /host/run
               name: run-vol
-            - mountPath: /host/var/run
-              name: varrun-vol
+            - mountPath: /host/var
+              name: var-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -279,9 +279,9 @@ spec:
         - name: run-vol
           hostPath:
             path: /run
-        - name: varrun-vol
+        - name: var-vol
           hostPath:
-            path: /var/run
+            path: /var
         {{- if (and (or (include "agent.ebpfEnabled" .) (include "agent.gke.autopilot" .)) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
