--- a/charts/sysdig/templates/daemonset.yaml
+++ b/charts/sysdig/templates/daemonset.yaml
@@ -222,8 +222,8 @@ spec:
             {{- end }}
             - mountPath: /host/run
               name: run-vol
-            - mountPath: /host/var/run
-              name: varrun-vol
+            - mountPath: /host/var
+              name: var-vol
             - mountPath: /dev/shm
               name: dshm
             - mountPath: /opt/draios/etc/kubernetes/config
@@ -281,9 +281,9 @@ spec:
         - name: run-vol
           hostPath:
             path: /run
-        - name: varrun-vol
+        - name: var-vol
           hostPath:
-            path: /var/run
+            path: /var
         {{- if (and (or .Values.ebpf.enabled .Values.gke.autopilot) .Values.slim.enabled) }}
         - name: bpf-probes
           emptyDir: {}
