--- a/charts/agent/tests/captures_test.yaml
+++ b/charts/agent/tests/captures_test.yaml
@@ -8,7 +8,7 @@ tests:
         disableCaptures: true
     asserts:
       - matchRegex:
-          path: data.dragent\.yaml
+          path: data['dragent.yaml']
           pattern: |
             sysdig_capture_enabled: false
     template: templates/configmap.yaml
