--- a/charts/registry-scanner/tests/configmap_test.yaml
+++ b/charts/registry-scanner/tests/configmap_test.yaml
@@ -14,13 +14,13 @@ tests:
       - isNotEmpty:
           path: data
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "logging: info"
 
   - it: maxWorkers defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "workers: 5"
   - it: maxWorkers wires if custom setup is given
     set:
@@ -28,13 +28,13 @@ tests:
         maxWorkers: 10
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "workers: 10"
 
   - it: maxTagsPerRepository defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxTagsPerRepository: 5"
   - it: maxTagsPerRepository wires if custom setup is given
     set:
@@ -43,13 +43,13 @@ tests:
           maxTagsPerRepository: 1
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxTagsPerRepository: 1"
 
   - it: maxAgeDays defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxAgeDays: 90"
   - it: maxAgeDays wires if custom setup is given
     set:
@@ -58,13 +58,13 @@ tests:
           maxAgeDays: 1
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxAgeDays: 1"
 
   - it: maxRepositories defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxRepositoriesPerRegistry: 500"
   - it: maxRepositories wires if custom setup is given
     set:
@@ -73,24 +73,24 @@ tests:
           maxRepositoriesPerRegistry: 1
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "maxRepositoriesPerRegistry: 1"
   - it: ttlSecondsAfterFinished defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "ttlSecondsAfterFinished: 600"
   - it: ttlSecondsAfterFinished wires if custom setup is given
     set:
       config.scan.jobs.ttlSecondsAfterFinished: 0
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "ttlSecondsAfterFinished: 0"
   - it: resource request and limit defaults if no custom setup is given
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: requests:\n\s*memory:\s*500Mi\n\s*cpu:\s*500m\n\s*limits:\s*memory:\s*2Gi
   - it: resource request and limit wires if custom setup is given
     set:
@@ -102,7 +102,7 @@ tests:
             memory: 2Mi
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: requests:\n\s*memory:\s*1Mi\n\s*cpu:\s*1m\n\s*limits:\s*memory:\s*2Mi
   - it: sets the temporaryVolumeSizeLimit on job
     set:
@@ -112,10 +112,10 @@ tests:
             temporaryVolumeSizeLimit: 10Gi
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "temporaryVolumeSizeLimit: 10Gi"
   - it: sets the default temporaryVolumeSizeLimit on job
     asserts:
       - matchRegex:
-          path: data.config\.yaml
+          path: data['config.yaml']
           pattern: "temporaryVolumeSizeLimit: 2Gi"
